<resources>
    <string name="app_name">Symptom Tracker</string>

    <!-- Screen titles -->
    <string name="title_today">Today</string>
    <string name="title_overview">Overview</string>
    <string name="title_resolved">Resolved</string>
    <string name="title_add_new">Add Symptom</string>

    <string name="label_treatments">Treatments</string>

    <!-- Labels for Symptom related data -->
    <string name="label_symptom">Symptom</string>
    <string name="label_current_treatments">Current Treatments</string>
    <string name="label_past_treatments">Past Treatments</string>
    <string name="label_status">Status</string>
    <string name="label_notes">Notes</string>
    <string name="label_severity">Severity</string>
    <string name="label_resolved_since">Resolved since</string>

    <!-- Default strings for when no information is provided -->
    <string name="default_no_info">-</string>

    <!-- Statuses -->
    <string name="status_doctor_informed">Doctor is informed</string>
    <string name="status_doctor_not_informed">Doctor not informed</string>
    <string name="status_need_to_see_doctor">You need to see a doctor</string>

    <string name="status_chronic">Chronic</string>
    <string name="status_not_chronic">Not Chronic</string>

    <string name="status_new">New</string>
    <string name="status_reoccurring">Reoccurring</string>

    <string name="status_resolved">Resolved</string>
    <string name="status_not_resolved">Not Resolved</string>

    <!-- Actions-->
    <string name="action_save">Save</string>
    <string name="action_edit_name">Edit Name</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_discard">Discard</string>
    <string name="action_delete">Delete</string>
    <string name="action_keep_editing">Keep editing</string>

    <!-- Dialog titles -->
    <string name="add_note_title">Add Note</string>
    <string name="edit_note_title">Edit Note</string>
    <string name="edit_symptom_name">Edit Symptom Name</string>

    <!-- Dialog messages -->
    <string name="dialog_msg_unsaved_changes">There are unsaved changes.</string>
    <string name="dialog_msg_delete">Delete?</string>
    <string name="dialog_msg_provide_all_info">Please fill all necessary fields</string>

    <!-- Error messages -->
    <string name="error_must_provide_name">Must provide a name</string>
    <string name="error_must_provide_time">Must provide time</string>

    <!-- AddSymptomActivity -->
    <string name="hint_symptom_name">Symptom name</string>
    <string name="hint_add_note">Note</string>

    <!-- Add New Treatment  Dialog-->
    <string name="add_treatment_title">Add Treatment</string>
    <string name="edit_treatment">Edit Treatment</string>
    <string name="label_treatment">Treatment</string>
    <string name="label_takes_effect">Takes effect in (optional)</string>
    <string name="label_was_successful">Treatment success (optional)</string>
    <string name="hint_optional">(optional)</string>

    <!-- Time Radio Group -->
    <string name="radio_time_hour">Hours</string>
    <string name="radio_time_day">Days</string>
    <string name="radio_time_week">Weeks</string>
    <string name="radio_time_month">Months</string>

    <!-- Time for treatment to take effect displayed in DetailActivity -->
    <plurals name="number_of_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="number_of_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="number_of_weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="number_of_months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>

    <!-- Treatment Successful Radio Group -->
    <string name="radio_treatment_successful">Successful</string>
    <string name="radio_treatment_unsuccessful">Unsuccessful</string>

    <!-- Treatment Current or past RadioGroup -->
    <string name="radio_treatment_current">Current Treatment</string>
    <string name="radio_treatment_past">Past Treatment</string>

    <!-- Severity -->
    <string name="severity_00">0</string>
    <string name="severity_1">1</string>
    <string name="severity_2">2</string>
    <string name="severity_3">3</string>
    <string name="severity_4">4</string>
    <string name="severity_5">5</string>
    <string name="severity_6">6</string>
    <string name="severity_7">7</string>
    <string name="severity_8">8</string>
    <string name="severity_9">9</string>
    <string name="severity_10">10</string>

    <!-- Doctors appointment scheduling reminder notification -->
    <string name="notification_schedule_appointment_title">The symptom hasn\'t been resolved for a week</string>
    <string name="notification_schedule_appointment_body">Perhaps it\'s time to schedule a doctors appointment</string>
    <string name="main_notification_channel_name">Primary</string>
    <string name="notification_title_append"> is unresolved</string>

    <!-- Content Description -->
    <string name="content_button_add_treatment">Add treatment</string>
    <string name="content_button_add_note">Add note</string>
    <string name="content_button_note_text">Note text</string>
    <string name="content_treatment_name">Treatment name</string>
    <string name="content_takes_effect">Treatment takes effect in</string>

    <!-- Text input hints -->
    <string name="hint_takes_effect_in">Takes effect in</string>

    <!-- Empty state text -->
    <string name="empty_no_unresolved_symptoms">There are no unresolved symptoms</string>
    <string name="empty_fragment_resolved">There are no resolved symptoms</string>
    <string name="empty_treatments_current">You haven\'t added any current treatments</string>
    <string name="empty_treatments_past">There are no past treatments</string>
    <string name="empty_notes">You haven\'t added any notes yet</string>
    <string name="empty_graph">No data added yet</string>

    <string name="add_widget">Add widget</string>
    <string name="add_new_symptom">Add new symptom</string>

</resources>
