<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.AddSymptomActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editCurrentTreatmentNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editCurrentTreatmentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_treatment"
            android:inputType="textCapWords" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editCurrentTimeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/middleGutter"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editCurrentTreatmentNameLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editCurrentTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_takes_effect_in"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.Guideline
        android:id="@+id/middleGutter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <RadioGroup
        android:id="@+id/radioGroupTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/middleGutter"
        app:layout_constraintTop_toTopOf="@+id/editCurrentTimeLayout">

        <RadioButton
            android:id="@+id/radioTimeHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_time_hour" />

        <RadioButton
            android:id="@+id/radioTimeDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_time_day" />

        <RadioButton
            android:id="@+id/radioTimeWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_time_week" />

        <RadioButton
            android:id="@+id/radioTimeMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_time_month" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>