<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddSymptomActivity">

    <TextView
        android:id="@+id/label_treatment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_treatment"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_current_treatments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:singleLine="false"
        android:text="@string/label_takes_effect"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_treatment_name" />

    <EditText
        android:id="@+id/editCurrentTreatmentName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <EditText
        android:id="@+id/editCurrentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:inputType="textPersonName|number"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/label_current_treatments" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editCurrentTime"
        app:layout_constraintTop_toTopOf="@+id/editCurrentTime">

        <RadioButton
            android:id="@+id/radioTimeHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_time_hour" />

        <RadioButton
            android:id="@+id/radioTimeDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_time_day" />

        <RadioButton
            android:id="@+id/radioTimeWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_time_week" />

        <RadioButton
            android:id="@+id/radioTimeMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_time_month" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>